# Data-Science

./: LICENSE  README.md
Data Visualization/: police-killing-eda-project.ipynb  readme.md
Divvy Bikes/: Folium_map.ipynb  Heatmap.ipynb  README.MD
Divvy Bikes/Presentation/: README.MD
Machine Learning/: online-ad-demand-prediction-ml-prj.ipynb  readme.md
Notes/: How to approach an ML problem.md
Web Scraping/: movies.csv  readme.md  web-scraping-project.ipynb
Web Scraping - Selenium/: LICENSE  README.md  YT_trending_movies.csv  pyproject.toml  scraper.py  trending.html
