[tool.poetry]
name = "repl_python3_selenium-youtube-scraper-3"
version = "0.1.0"
description = ""
authors = ["dsarojam2021 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
